--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeM.slide"/>
         <activity
+            android:name=".Main.Activity_AnQuan"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeM.slide"/>
+        <activity
             android:name=".WebView.WebViewCanteen"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"
