--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,19 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:25.0.1'
-    implementation 'com.android.support:design:25.0.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    //implementation 'com.android.support:appcompat-v7:25.0.1'
+    //implementation 'com.android.support:design:25.0.1'
     testImplementation 'junit:junit:4.12'
     implementation files('libs/fastjson-1.1.27-android.jar')
     implementation files('libs/qysdk.jar')
     implementation files('libs/nineoldandroids-2.4.0.jar')
+
+    //PushSDK必须依赖基础组件库，所以需要加入对应依赖
+    implementation 'com.umeng.sdk:common:1.5.0'
+    //PushSDK必须依赖utdid库，所以需要加入对应依赖
+    implementation 'com.umeng.sdk:utdid:1.1.5.3'
+    //PushSDK
+    implementation 'com.umeng.sdk:push:4.1.0'
 }
