--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher4"
+        android:name=".App"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- 友盟key -->
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5adb001ff29d981f21000059">
+        </meta-data>
+
         <activity
             android:name=".ActivityLogin"
             android:label="@string/app_name"
